# Motion-Matching-for-Human-Skeleton

./: CMakeLists.txt  README.md  imgui.ini
data/mocap/lafan1_dance/: dance1_subject1_crop.bvh  dance2_subject1_crop.bvh
data/mocap/lafan1_jump/: ground1_subject4.bvh  obstacles1_subject1.bvh
data/mocap/lafan1_stop/: walk1_subject1_stop.bvh
data/mocap/mann/: D1_007_KAN01_001.bvh  D1_009_KAN01_001.bvh  D1_009_KAN01_002.bvh  D1_010_KAN01_002.bvh  D1_010_KAN01_003.bvh  D1_010_KAN01_004.bvh  D1_025_KAN01_001.bvh  D1_045_KAN01_001.bvh  D1_047z_KAN01_002.bvh  D1_047z_KAN01_003.bvh  D1_047z_KAN01_004.bvh  D1_047z_KAN01_005.bvh  D1_049_KAN01_001.bvh  D1_053_KAN01_001.bvh  D1_053_KAN01_002.bvh  D1_061z_KAN01_002.bvh  D1_071_KAN02_002.bvh  D1_ex01_KAN01_001.bvh  D1_ex03_KAN02_012.bvh  D1_ex03_KAN02_013.bvh  D1_ex03_KAN02_014.bvh  D1_ex04_KAN02_002.bvh  D1_ex04_KAN02_003.bvh  D1_ex04_KAN02_004.bvh  D1_ex06_KAN02_001.bvh  LICENSE
ext/: CMakeLists.txt
modified/: BvhJoint.cpp  BvhJoint.h  BvhParser.cpp  MocapClip.h  MocapUtils.cpp  MocapUtils.h  path.txt
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/momApp/: CMakeLists.txt  app.h  main.cpp
src/libs/: CMakeLists.txt
src/libs/mom/: CMakeLists.txt
src/libs/mom/include/mom/: MotionDatabase.h  MotionMatching.h
src/libs/mom/src/: MotionDatabase.cpp
